{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 78,
  "lineage": "34ade1eb-44b1-acc1-0dc7-eaa825e4bcc0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "3e2sgzmgdsxubfiwwthndahz4c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/publicIPAddresses/web-pip",
                "subnet_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/web-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-B4-D0",
            "name": "web-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "test-resources",
            "tags": {
              "environment": "online_test"
            },
            "virtual_machine_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Compute/virtualMachines/web-server"
          },
          "dependencies": [
            "azurerm_public_ip.web-pip",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/app-sg",
            "location": "eastus",
            "name": "app-sg",
            "resource_group_name": "test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "app-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "online_test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/db-sg",
            "location": "eastus",
            "name": "db-sg",
            "resource_group_name": "test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "online_test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/web-sg",
            "location": "eastus",
            "name": "web-sg",
            "resource_group_name": "test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "online_test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/publicIPAddresses/web-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.127.36.109",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-pip",
            "resource_group_name": "test-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "online_test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/app-subnet",
            "name": "app-subnet",
            "resource_group_name": "test-resources",
            "virtual_network_name": "test-network"
          },
          "dependencies": [
            "azurerm_resource_group.project-rg",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "test-resources",
            "virtual_network_name": "test-network"
          },
          "dependencies": [
            "azurerm_resource_group.project-rg",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "test-resources",
            "virtual_network_name": "test-network"
          },
          "dependencies": [
            "azurerm_resource_group.project-rg",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/app-sg",
            "subnet_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/app-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app-sg",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/db-sg",
            "subnet_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/db-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db-sg",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/web-sg",
            "subnet_id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web-sg",
            "azurerm_resource_group.project-rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.project-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "project-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "652339e9-1c86-40af-9516-b4ced180f9f2",
            "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network",
            "location": "eastus",
            "name": "test-network",
            "resource_group_name": "test-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/web-sg"
              },
              {
                "address_prefix": "10.123.2.0/24",
                "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/app-sg"
              },
              {
                "address_prefix": "10.123.3.0/24",
                "id": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/e758de12-2b3b-4c75-b042-a556ca59ee3e/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/db-sg"
              }
            ],
            "tags": {
              "environment": "online_test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.project-rg"
          ]
        }
      ]
    }
  ]
}